styles/style.css
@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

:root {
  --link-opacity: .7;
  --link-transition: opacity .3s ease-in-out;
}

.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: "Helvetica Neue", Arial, sans-serif;
}

/* HEADER */
.header {
  position: relative;
  display: flex;
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  background-color: #f2f2f2;
  overflow: hidden;
  /* выше установили ограничения для секции */
}

.logo {
  width: 228px;
  height: 32px;
}

.logo_place_header {
  position: absolute;
  top: 30px;
  left: 64px;
  z-index: 2;
  background-image: url(../images/logo_place_header.svg);
}

.header__title {
  max-width: 730px;
  width: 100%;
  font-size: 102px;
  font-weight: 600;
  line-height: 96px;
  align-self: center;
  margin: 0 0 0 64px;
  padding: 0;
  z-index: 2;
}

.header__subtitle {
  margin: 0;
  padding: 0;
  width: 388px;
  position: absolute;
  left: 64px;
  bottom: 30px;
  font-size: 18px;
  font-weight: normal;
  line-height: 25px;
  z-index: 2;
}

.header__link {
  text-decoration: none;
  color: #2f80ed;
}

.header__link:hover {
  opacity: var(--link-opacity);
  transition: var(--link-transition);
}

.header__main-illustration {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 765px;
  height: 608px;
  z-index: 1;
}

.header__square-pic {
  position: absolute;
  top: 64px;
  right: 0;
  height: 568px;
  width: 568px;
  background-color: #2f80ed;
  z-index: 0;
  animation: rotation 20s linear infinite;
}


/* DESCRIPTION */

.description {
  margin: 100px 0 0 0;
  display: flex;
}

.two-columns {
  display: flex;
  width: 80%;
  margin: 0 auto;
  justify-content: space-between;
}

.two-columns__brief {
  margin: 0;
  padding: 0;
  max-width: 175px;
  font-size: 18px;
  font-weight: normal;
  line-height: 1.2;
  color: #2f80ed;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  margin: 30px 0;
  padding: 0;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.two-columns__paragraph:first-child{
  margin: 0;
}

.two-columns__paragraph:last-child{
  margin: 0;
}

.two-columns__span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: 600;
}


/* TECHNIQUES */

.techniques {
  width: 80%;
  margin: 100px auto 0;
}

.cards {
  max-width: 920px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  gap: 0 100px;
}

.cards__item {
  margin-top: 60px;
  width: 240px;
  display: flex;
  flex-direction: column;
  align-items:center
}

.cards__image {
  width: 160px;
  height: 160px;
  border-radius: 50%;
}

.cards__title {
  margin: 43px auto 16px;
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
}

.cards__description {
  margin: 0;
  text-align: center;
  line-height: 23px;
  font-size: 18px;
  font-weight: normal;
}

/* FEYNMAN */
.feynman {
  min-height: 890px;
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  padding-top: 100px;
  background-color: #f2f2f2;
  background-image: url(../images/feynman.png);
  background-repeat: no-repeat;
  background-position: left bottom;
  background-size: 867px 637px;
  box-sizing: border-box;
}
.feynman__title {
  width: 648px;
  margin: 0 auto 70px;
  padding: 0;
  text-align: center;
  line-height: 1.15;
  font-size: 120px;
  font-weight: 600;
  z-index: 1;
}
.feynman__subtitle {
  margin: 0 auto;
  padding: 0;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  z-index: 1;
}

.feynman__link {
  position: absolute;
  text-decoration: none;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  right: 48px;
  top: 50%;
  z-index: 1;
  color: #2f80ed;
}

.feynman__link:hover {
  opacity: var(--link-opacity);
  transition: var(--link-transition);
}

.feynman-bg {
  position: absolute;
  width: 867px;
  height: 637px;
  bottom: 0;
  left: 0;
  z-index: 0;
}

/* DIGITS */
.digits {
  margin-top: 100px;
  display: flex;
  flex-direction: column;

}

.section-title {
  width: 60%;
  text-align: center;
  margin: 0 auto;
  padding: 0;
  line-height: 1.15;
  font-size: 60px;
  font-weight: bold;
}

.section-subtitle {
  width: 60%;
  text-align: center;
  margin: 20px auto 0;
  padding: 0;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.table {
  width: 1100px;
  margin: 60px auto 100px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  row-gap: 60px;
}

.table__cell {
  width: 250px;
}

.table__heading {
  margin: 0 0 20px;
  padding: 0;
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
}

.table__text {
  margin: 20px 0 0 0;
  padding: 0;
  line-height: 1.12;
  font-size: 18px;
  font-weight: normal;
}

/* KHAN */
.khan {
  width: 80%;
  margin: 105px auto 0;
}

.khan__container {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.khan__author {
  margin: 0;
  line-height: 42px;
  font-size: 30px;
  font-weight: normal;
}

.khan__title {
  margin: 0;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
}

.khan__quote {
  max-width: 790px;
  width: 100%;
  margin-top: 50px;
  margin-bottom: 36px;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.khan__quote-author {
  margin: 0 0 10px 0;
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
}

.khan__quote-author-subline {
  margin: 0;
  line-height: 1.15;
  font-size: 24px;
  font-weight: normal;
}

.khan__book-container {
  margin-top: 68px;
  display: flex;
  gap: 48px;
}

.khan__book-pic {
  height: 620px;
  width: 608px;
  object-position: left top;
  object-fit:cover;
}

.khan__buy-link {
  line-height: 42px;
  font-size: 30px;
  font-weight: normal;
  text-decoration: none;
  color: #2f80ed;
}

.khan__buy-link:hover {
  opacity: var(--link-opacity);
  transition: var(--link-transition);
}


/* KAUFMAN */

.kaufman {
  background-color: #1f1f1f;
  display: flex;
  flex-direction: column;
  position: relative;
  z-index: 1;
  overflow: hidden;
  padding-top: 90px;
}

.kaufman__triangle {
  width: 877px;
  height: 877px;
  position: absolute;
  top: 0;
  right: -210px;
  background-image: url(../images/kaufman-triangle.svg);
  background-size: cover;
  z-index: -1;
  animation: rotation 20s linear infinite;
}

.table_theme_dark {
  margin: 0 auto 90px;
  background-color: #1f1f1f;
  gap: 0;
  background: transparent;
}

.section-title_theme_dark {
  color: #fff;
}

.section-subtitle_theme_dark {
  color: #fff;
}

.table__heading_theme_dark {
  color: #fff;
}

.table__cell_theme_dark {
  width: 200px;
  color: #fff;
  margin-right: 0;
  margin-top: 80px;
}

.table__text_theme_dark {
  color: #fff;
}


/* FOOTER */

.footer {
  background-color: #1f1f1f;
}

.footer__columns {
  width: 90%;
  min-height: 350px;
  display: flex;
  margin: 0 auto;
  padding: 60px 0 40px;
  height: 100%;
  justify-content: space-between;
  box-sizing:border-box;
}

.footer__column {
  display: flex;
  flex-direction: column;
}

.footer__column_content_copyright {
  flex-basis: 711px;
  justify-content: space-between;
}

.footer__column_content_info {}

.footer__column_content_social {}

.logo_place_footer {
  background-image: url(../images/logo_place_footer.svg);
}

.footer__author {
  margin: 18px 0;
  padding: 0;
  color: #fff;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column-heading {
  margin: 0;
  padding: 0;
  line-height: 30px;
  font-size: 18px;
  font-weight: 600;
  color: #fff;
  margin-bottom: 20px;
}

.footer__column-links {
  display: flex;
  flex-direction: column;
}

.footer__column-link {
  display: flex;
  align-items: center;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
  color: #fff;
  text-decoration: none;
}

.footer__column-link:hover {
  opacity: var(--link-opacity);
  transition: var(--link-transition);
}

.footer__social-icon {
  width: 16px;
  height: 16px;
  margin-right: 10px;
}

